[package]
name = "actix-erlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"